# octopus

./: .gitignore  README.md  pyproject.toml
octopus/: __init__.py  ast_visitor.py  codegen.py  compiler_report.py  dotter.py  ir.py  ir_builder.py  ir_codegen.py  ir_visitor.py  iroptim.py  irtodot.py  lang_ast.py  lex.py  lsp_utils.py  main.py  parsetab.py  yacc.py
tests/samples/: example5.tant  exemple1.tant  exemple2.tant  exemple3.tant  exemple4.tant  random_search.tant  warning1.tant
