[tool.poetry]
name = "octopus"
version = "1.0"
description = ""
authors = ["Jean-Baptiste Doderlein <jean-baptiste.doderlein@ens-rennes.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ply = "^3.11"

[tool.poetry.scripts]
octopus = "octopus.main:main"
occ = "octopus.main:main"
ocd = "octopus.dotter:dotter"
octodot = "octopus.dotter:dotter"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
